@@ -6,7 +6,6 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -26,7 +25,7 @@ public class DebtPositionSendEventDTO2InstallmentRegistryMapper {
         .organizationId(dto.getPayload().getOrganizationId())
         .nav(noticeCode)
         .build())
-      .collect(Collectors.toList());
+      .toList();
   }
 
 }
